class selector bug and left section format
changed all id into class so it's stylable in css.
completed the formatting of left section using
combination of flex and position absolute for
footer.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="background-section">
-    <div id="logo-section">
-      <img src="odin-lined.png" alt="logo image" id="logo">
-      ODIN
+  <div class="container">
+    <div class="background-section">
+      <div class="logo-section">
+        <img src="odin-lined.png" alt="logo image" class="logo">
+        <h1>ODIN</h1>
+      </div>
+      <footer>Photo by <a href="https://unsplash.com/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Halie West</a> on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></footer>
     </div>
-    <footer>Photo by <a href="https://unsplash.com/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Halie West</a> on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></footer>
-  </div>
-  <div id="form-section">
-    <div id="disclaimer">
-      <p>This is not a real online service! You know you need something like this in your life to help you realize yoru deepest dreams. Sign up <em>now</em> to get started.</p>
-      <p>You <em>know</em> you want to.</p>
+    <div class="form-section">
+      <div class="disclaimer">
+        <p>This is not a real online service! You know you need something like this in your life to help you realize yoru deepest dreams. Sign up <em>now</em> to get started.</p>
+        <p>You <em>know</em> you want to.</p>
+      </div>
     </div>
   </div>
 </body>
