import nosrsebold font
imported norsebold font using @font-face and apply
to logo text.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="background-section">
       <div class="logo-section">
         <img src="odin-lined.png" alt="logo image" class="logo">
-        <h1>ODIN</h1>
+        <h1 class="logo-text">ODIN</h1>
       </div>
       <footer>Photo by <a href="https://unsplash.com/@haliewestphoto?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Halie West</a> on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></footer>
     </div>
