--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     </div>
     <div class="form-section">
       <div class="disclaimer">
-        <p>This is not a real online service! You know you need something like this in your life to help you realize yoru deepest dreams. Sign up <em>now</em> to get started.</p>
-        <p>You <em>know</em> you want to.</p>
+        <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
+        <p>Sign up <em>now</em> to get started.</p>
+        <p class="expression">You <em>know</em> you want to.</p>
       </div>
     </div>
   </div>
