--- a/index.html
+++ b/index.html
@@ -21,6 +21,39 @@
         <p>Sign up <em>now</em> to get started.</p>
         <p class="expression">You <em>know</em> you want to.</p>
       </div>
+      <form action="" method="post">
+        <h2 class="form-heading">Let's do this!</h2>
+        <div class="name-form">
+          <div>
+            <label for="first-name">FIRST NAME</label>
+            <input type="text" name="user-first-name" id="first-name">
+          </div>
+          <div>
+            <label for="last-name">LAST NAME</label>
+            <input type="text" name="user-last-name" id="last-name">
+          </div>
+        </div>
+        <div class="personal-info-form">
+          <div>
+            <label for="mail">EMAIL</label>
+            <input type="email" name="email" id="mail">
+          </div>
+          <div>
+            <label for="phone-number">PHONE NUMBER</label>
+            <input type="tel" name="user-phone-number" id="phone-number">
+          </div>
+        </div>
+        <div class="pwd-creation-form">
+          <div>
+            <label for="pwd">PASSWORD</label>
+            <input type="password" name="user-password" id="pwd">
+          </div>
+          <div>
+            <label for="confirm-pwd">CONFIRM PASSWORD</label>
+            <input type="password" name="user-password-confirm" id="confirm-pwd">
+          </div>
+        </pwd-creation-form>
+      </form>
     </div>
   </div>
 </body>
