added form styling
blue border for focused inputs and red border for
invalid entries in the input. password and confirm
password is required.

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <div class="pwd-creation-form">
           <div>
             <label for="pwd">PASSWORD</label>
-            <input type="password" name="user-password" id="pwd">
+            <input type="password" name="user-password" id="pwd" required>
           </div>
           <div>
             <label for="confirm-pwd">CONFIRM PASSWORD</label>
-            <input type="password" name="user-password-confirm" id="confirm-pwd">
+            <input type="password" name="user-password-confirm" id="confirm-pwd" required>
           </div>
         </pwd-creation-form>
       </form>
