styled button and log in link
gave the button background color of green and
text color white. removed border added round
corners and gave padding for both button and
section container. removed text decoration for
log in link and gave it the same color as button.

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
       </form>
       <div class="form-submit-section">
           <button type="submit" form="myform">Create Account</button>
-          <div>
-            <p>Already have an account? <a href="login.com">Log in</a></p>
-          </div>
+          <p>Already have an account? <a href="login.com" class="log-in-link">Log in</a></p>
       </div>
     </div>
   </div>
